Added GET /patient/:id implementation Fixed few entries in docs
