# routes/patient.go
@@ -3,6 +3,9 @@ package routes
 import (
 	"log"
 	"net/http"
+	"strings"
+
+	sf "github.com/sa-/slicefunk"
 
 	"github.com/TekClinic/API-Gateway/middlewares"
 	"github.com/TekClinic/API-Gateway/schemas"
@@ -33,7 +36,7 @@ func getPatients(service patients.PatientsServiceClient) gin.HandlerFunc {
 		}
 
 		// call patient microservice
-		response, err := service.GetPatientsIds(ctx, &patients.PatientsRequest{
+		response, err := service.GetPatientsIDs(ctx, &patients.PatientsRequest{
 			Token:  ctx.GetString(middlewares.TokenKey),
 			Limit:  params.Limit,
 			Offset: params.Skip,
@@ -46,6 +49,62 @@ func getPatients(service patients.PatientsServiceClient) gin.HandlerFunc {
 		ctx.JSON(http.StatusOK,
 			CreateNamedAPIResourceList(ctx, resourceName,
 				params.Skip, params.Limit, response.GetCount(), response.GetResults()))
+	}
+}
+
+type PatientParams struct {
+	ID int32 `uri:"id" binding:"required"`
+}
+
+func getPatient(service patients.PatientsServiceClient) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		// fetch params from the path
+		var params PatientParams
+		err := ctx.ShouldBindUri(&params)
+		if err != nil {
+			ctx.AbortWithStatusJSON(http.StatusBadRequest, schemas.ErrorResponse{
+				Message: err.Error(),
+			})
+			return
+		}
+
+		// call patient microservice
+		response, err := service.GetPatient(ctx, &patients.PatientRequest{
+			Token: ctx.GetString(middlewares.TokenKey),
+			Id:    params.ID,
+		})
+		if err != nil {
+			HandleGRPCError(err, ctx)
+			return
+		}
+
+		ctx.JSON(http.StatusOK,
+			schemas.Patient{
+				PatientBase: schemas.PatientBase{
+					Name: response.GetName(),
+					PersonalID: schemas.PersonalID{
+						ID:   response.GetPersonalId().GetId(),
+						Type: response.GetPersonalId().GetType(),
+					},
+					Gender:      strings.ToLower(response.GetGender().String()),
+					PhoneNumber: response.GetPhoneNumber(),
+					Languages:   response.GetLanguages(),
+					BirthDate:   response.GetBirthDate(),
+					EmergencyContacts: sf.Map(response.GetEmergencyContacts(),
+						func(contact *patients.Patient_EmergencyContact) schemas.EmergencyContact {
+							return schemas.EmergencyContact{
+								Name:      contact.GetName(),
+								Closeness: contact.GetCloseness(),
+								Phone:     contact.GetPhone(),
+							}
+						}),
+					ReferredBy:  response.GetReferredBy(),
+					SpecialNote: response.GetSpecialNote(),
+				},
+				ID:     response.GetId(),
+				Active: response.GetActive(),
+				Age:    response.GetAge(),
+			})
 	}
 }
 
@@ -62,5 +121,5 @@ func RegisterPatientRoutes(router *gin.Engine) {
 
 	router.GET("/patient", getPatients(client))
 	router.POST("/patient", UnImplemented())
-	router.GET("/patient/:id", UnImplemented())
+	router.GET("/patient/:id", getPatient(client))
 }
